[package]
name = "stable-acpi"
version = "6.0.1"
authors = ["JJ"]
repository = "https://github.com/JJtheJJpro/stable-acpi"
description = "A pure-Rust stable library for interacting with ACPI"
categories = ["hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
log = "0.4.20"
spinning_top = "0.3.0"
pci_types = { version = "0.10.0", public = true }
byteorder = { version = "1.5.0", default-features = false }

[features]
default = ["alloc", "aml"]
alloc = []
aml = ["alloc"]
